Apply hook location returns it to 0,0,0 #40029

Closed
opened 2014-05-05 07:14:38 +02:00 by Predrag Lazic · 7 comments

System Information
Macintosh osX lion 10.7.5, AMD Radeon HD 6750M

Blender Version
2.70, 19e627c

Short description of error
Applying a hook to a vertex in edit ground then applying location in object mode resets it's global position instead of its transforms.

Exact steps for others to reproduce the error

  • load factory settings
  • enter edit
  • pick a vertex and ctrl+h (hook to new object)
  • object mode + select hook
  • ctrl+a to reset it's transforms.
**System Information** Macintosh osX lion 10.7.5, AMD Radeon HD 6750M **Blender Version** 2.70, 19e627c **Short description of error** Applying a hook to a vertex in edit ground then applying location in object mode resets it's global position instead of its transforms. **Exact steps for others to reproduce the error** - load factory settings - enter edit - pick a vertex and ctrl+h (hook to new object) - object mode + select hook - ctrl+a to reset it's transforms.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @particl3s

Added subscriber: @particl3s

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2014-05-05 07:45:13 +02:00

There is no bug here, this is the expected behavior. As you said, the name of the operator is “Apply Transformation”, not “Reset Transformation”, and the empty is not child of the vertex…

There is no bug here, this is the expected behavior. As you said, the name of the operator is “Apply Transformation”, not “Reset Transformation”, and the empty is not child of the vertex…

This issue was referenced by blender/blender-addons-contrib@38a430c027

This issue was referenced by blender/blender-addons-contrib@38a430c0272261eb5b40531008ac300ccdae3a18

This issue was referenced by 38a430c027

This issue was referenced by 38a430c0272261eb5b40531008ac300ccdae3a18
Author

okay. it just seemed odd.

okay. it just seemed odd.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40029
No description provided.