Fix T40029: Apply transform to empties reset their location

also add check for negative scale